--- a/index.html
+++ b/index.html
@@ -14,8 +14,12 @@
         <nav class="d-flex justify-between p-2 wrap ">
             <img src="./assets/styles/images/65b73fb7-2706-4440-87b9-9555fcd0ba80.webp" class="logo" alt="logo">
             <ul class="d-flex justify-between gap-5 align-center mr fontsize2">
-                <li>Home</li>
-                <li>About Us</li>
+                <a href="./index.html">
+                    <li>Home</li>
+                </a>
+                <a href="./about.html">
+                    <li>About Us</li>
+                </a>
                 <li>Publication</li>
                 <li>Feedback</li>
                 <button class="button1">Get a Frenchinse</button>
@@ -221,16 +225,19 @@
 
     <div class="d-flex gap-2 mt-4">
         <img class="nop" src="./assets/styles/images/0e1296ae-9bcd-493a-a13f-81bd0a376fbb.webp" alt="">
-        <img class="nop"  src="./assets/styles/images/90ae7dd1-d505-40d1-a8ea-bce0ae9353f0.webp" alt="">
+        <img class="nop" src="./assets/styles/images/90ae7dd1-d505-40d1-a8ea-bce0ae9353f0.webp" alt="">
         <img class="nop" src="./assets/styles/images/2741f491-d49f-4ec1-9de3-4df086748b54.webp" alt="">
-        <img class="nop"src="./assets/styles/images/b75b70d0-122d-4754-99a5-2ff3e0905144.webp" alt="">
+        <img class="nop" src="./assets/styles/images/b75b70d0-122d-4754-99a5-2ff3e0905144.webp" alt="">
         <img class="nop" src="./assets/styles/images/ad91d5cd-9c6d-4233-8f33-55b18886c858.webp" alt="">
     </div>
 
     <div class=" d-flex justify-evenly mt-4 flex-row">
         <div>
             <img class="moon" src="./assets/styles/images/65b73fb7-2706-4440-87b9-9555fcd0ba80.webp" alt="">
-            <p id="lite">The Salt’n Pepper Restaurants are an example of <br> gracious dinning, outstanding service, extraordinary <br> classic and contemporary cuisine. The restaurants <br> have become the ultimate dinning destinations in <br> Lahore. From family occasions to business dinner <br> and moments of the heart, this place is where <br> unforgettable memories are made.</p>
+            <p id="lite">The Salt’n Pepper Restaurants are an example of <br> gracious dinning, outstanding service,
+                extraordinary <br> classic and contemporary cuisine. The restaurants <br> have become the ultimate
+                dinning destinations in <br> Lahore. From family occasions to business dinner <br> and moments of the
+                heart, this place is where <br> unforgettable memories are made.</p>
             <p id="unit">Terms & Condition privacy-policy</p>
         </div>
         <div class="kok">
@@ -264,12 +271,16 @@
     </div>
 
 
-<hr>
+    <hr>
 
-<div class="d-flex justify-between fontsize2">
-<div><p id="quite">2024 Salt n Peper Restaurant</p></div>
-<div><p id="den">Powered By Hassan Khan</p></div>
-</div>
+    <div class="d-flex justify-between fontsize2">
+        <div>
+            <p id="quite">2024 Salt n Peper Restaurant</p>
+        </div>
+        <div>
+            <p id="den">Powered By Hassan Khan</p>
+        </div>
+    </div>
 
 </body>
 
