--- a/about.html
+++ b/about.html
@@ -157,21 +157,11 @@
             <img class="elo" src="./assets/styles/images/00.webp" alt="">
         </div>
         <div>
-            <p id="well" class="fontsize2 text-grey">Salt’n Pepper Restaurants were founded in an effort to capitalize
-                on the <br> golden opportunities created by the rapidly growing restaurant industry <br>.
-
-                Via our franchise programme, we are focused on further expanding our <br> restaurant network. <br>
-
-                Salt’n Pepper intends to give franchise rights to the interested investors to <br> establish Salt’n
-                Pepper Express Restaurants in different cities of Pakistan. <br> The franchises shall be offered under
-                the name of ‘Salt’n Pepper Express’<br> only.
-
-                With our vision to evolve with changing times, we are proud to offer a smart <br> and practical concept
-                as a great addition to the food chain dynamics today: <br>
-
-                Our Express Business Model comprises of a smart but compact restaurant in <br> terms of seating and
-                kitchen. This condensed model will offer a menu with a <br> selected number of our most favorite and
-                popular dishes from our original <br> menu. You may consider it as ‘Salt n Pepper – Mini’.</p>
+            <p id="well" class="fontsize2 text-grey">Salt’n Pepper Restaurants were founded in an effort <br> to capitalize
+                on the  golden opportunities created by the <br> rapidly growing  restaurant industry 
+                Our Express Business <br> Model comprises of a smart <br> but compact restaurant in  terms of seating and
+                kitchen. <br> This condensed model will offer a menu with a  selected <br> number of our most favorite and
+                popular dishes from our <br> original  menu. You  may consider it as ‘Salt n Pepper – Mini’.</p>
         </div>
     </div>
 
