--- a/about.html
+++ b/about.html
@@ -8,11 +8,12 @@
 </head>
 <link rel="stylesheet" href="assets/styles/style.css">
 <link rel="stylesheet" href="assets/styles/utility.css">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
 <body class="bg-dark">
 
     <div>
-        <nav class="d-flex justify-between p-2 wrap ">
+        <nav class="d-flex justify-between p-0 wrap " style="position: fixed; top: 0;width: 100%;z-index: 999;background-color: #111;">
             <img src="./assets/styles/images/65b73fb7-2706-4440-87b9-9555fcd0ba80.webp" class="logo" alt="logo">
             <ul class="d-flex justify-between gap-5 align-center mr fontsize2">
                 <a href="./index.html">
@@ -21,10 +22,16 @@
                 <a href="./about.html">
                     <li>About Us</li>
                 </a>
-                <li>Publication</li>
+                <a href="./Publication.html">
+                    <li>Publication</li>
+               </a>
+               <a href="./Feedback.html">
                 <li>Feedback</li>
+            </a>
+            <a href="./Frenchise.html">
                 <button class="button1">Get a Frenchinse</button>
-                <button class="button2">Order Online</button>
+               </a>
+                <button class="button2">Order Online <span><i class="fa-solid fa-arrow-right"></i></span></button>
             </ul>
         </nav>
     </div>
@@ -92,12 +99,7 @@
         <div class="mt-5">
             <p class=" fontsize3 ">Salt'n Pepper Restaurants (1992)</p>
             <p class="mt-4 fontsize2 text-grey">The Salt’n Pepper Village Restaurant in Lahore is considered to be
-                the <br> restaurant that revolutionized dining experiences in Pakistan. The Village <br> offers
-                classic and modern sub-continental dishes. The village restaurant <br> created a new concept of
-                “Live Buffet” where everything is cooked in <br> front of you in a ‘bazaar’ like atmosphere. The
-                Village is an acclaimed <br> restaurant brand, credited with the promotion of the Pakistani cuisine
-                and <br> the revival of some old recipes. The Village Lahore has an seating capacity <br> of over
-                300 guests. This restaurant has hosted countless lunches and <br> dinners for local and foreign
+                the <br> restaurant that revolutionized dining experiences in Pakistan. The Villag <br> created a new concept of
                 dignitaries and celebrities like the late <br> Princess Diana, late prime minister of Pakistan
                 Benazir Bhutto, ex- <br>president of Pakistan Gen. (R) Pervez Musharraf and many more.</p>
         </div>
@@ -243,7 +245,7 @@
             <p id="unit">Terms & Condition privacy-policy</p>
         </div>
         <div class="kok">
-            <h2>Site Link</h2>
+            <h3>Site Link</h3>
             <ul>
                 <li class="rep">Home</li>
                 <li class="rep">About Us</li>
@@ -253,7 +255,7 @@
             </ul>
         </div>
         <div class="kok">
-            <h2>Contact Us</h2>
+            <h3>Contact Us</h3>
             <ul>
                 <li class="pop">+92 42 358 509 31 (Head Office)</li>
                 <li class="pop">+92 42 358 509 30 (Head Office)</li>
@@ -264,7 +266,7 @@
             </ul>
         </div>
         <div class="kok">
-            <h2>Follow Us</h2>
+            <h3>Follow Us</h3>
             <img class="jeet" src="./assets/styles/images/2024-01-19.png" alt="">
             <br>
             <img class="kill" src="./assets/styles/images/15a204d9-9623-4aea-8c7a-a4419417ee7e.webp" alt=""><br>
