--- a/index.html
+++ b/index.html
@@ -7,11 +7,12 @@
     <title>Salt'n Pepper</title>
     <link rel="stylesheet" href="assets/styles/style.css">
     <link rel="stylesheet" href="assets/styles/utility.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 
 <body class="bg-dark wrap">
     <div>
-        <nav class="d-flex justify-between p-2 wrap ">
+        <nav class="d-flex justify-between p-0 wrap " style="position: fixed; top: 0;width: 100%;z-index: 999;background-color: #111;">
             <img src="./assets/styles/images/65b73fb7-2706-4440-87b9-9555fcd0ba80.webp" class="logo" alt="logo">
             <ul class="d-flex justify-between gap-5 align-center mr fontsize2">
                 <a href="./index.html">
@@ -20,10 +21,16 @@
                 <a href="./about.html">
                     <li>About Us</li>
                 </a>
-                <li>Publication</li>
-                <li>Feedback</li>
+               <a href="./Publication.html">
+                 <li>Publication</li>
+            </a>
+                <a href="./Feedback.html">
+                    <li>Feedback</li>
+                </a>
+               <a href="./Frenchise.html">
                 <button class="button1">Get a Frenchinse</button>
-                <button class="button2">Order Online</button>
+               </a>
+                <button class="button2">Order Online <span><i class="fa-solid fa-arrow-right"></i></span></button>
             </ul>
         </nav>
     </div>
@@ -146,7 +153,7 @@
             <img class="loh" src="./assets/styles/images/171bb884-f60a-4d94-a0b9-78204522564e.webp" alt="">
             <p id="kit">JHELUM</p>
             <h1 id="tik">Salt'n Pepper Express</h1>
-            <p id="itk">Opposite Dancing Fountain Gallery <br> 2 Citi Housing Jhelum,</p>
+            <p id="itk">Opposite Dancing Fountain Gallery <br> 2 Citi Housing Jhelum,</p>  
             <p id="kti">ph:0307 7675555</p>
             <button class="tub">Get Directions</button>
         </div>
@@ -241,7 +248,7 @@
             <p id="unit">Terms & Condition privacy-policy</p>
         </div>
         <div class="kok">
-            <h2>Site Link</h2>
+            <h3>Site Link</h3>
             <ul>
                 <li class="rep">Home</li>
                 <li class="rep">About Us</li>
@@ -251,7 +258,7 @@
             </ul>
         </div>
         <div class="kok">
-            <h2>Contact Us</h2>
+            <h3>Contact Us</h3>
             <ul>
                 <li class="pop">+92 42 358 509 31 (Head Office)</li>
                 <li class="pop">+92 42 358 509 30 (Head Office)</li>
@@ -262,7 +269,7 @@
             </ul>
         </div>
         <div class="kok">
-            <h2>Follow Us</h2>
+            <h3>Follow Us</h3>
             <img class="jeet" src="./assets/styles/images/2024-01-19.png" alt="">
             <br>
             <img class="kill" src="./assets/styles/images/15a204d9-9623-4aea-8c7a-a4419417ee7e.webp" alt=""><br>
